sumo/tests/jtrrouter/errors/network/edge/lane/root__edge__lane#maxspeed__empty22/errors.jtrrouter
Error: Attribute 'maxspeed' in definition of lane '2_1' is empty.
Quitting (on error).
